@@ -13,7 +13,7 @@ test_that('dich data', {
                  tolerance = 1e-2)
     fs <- fscores(mod1, verbose = FALSE)
     expect_is(fs, 'matrix')
-    expect_equal(fs[1:6,'F1'], c(-0.60798152, -0.07507832, -1.91232080, -1.99377540, -2.00032202, -1.90839100), tolerance = 1e-2)
+    expect_equal(fs[1:6,'F1'], c(-1.3732391, -0.8030791, -1.4868364, -1.4993907, -1.7456934, -1.4884274), tolerance = 1e-2)
     cof <- coef(mod1, verbose = FALSE)
     expect_is(cof, 'list')
     sum <- summary(mod1, verbose = FALSE)
@@ -95,8 +95,7 @@ test_that('dich data', {
     expect_equal(cfs, c(1.1762, -0.9797, 1.0192, 0.1543, -1.4515, 1.0503, 0.3344, 1.485, 1.2114, 0.8021, 0.051, 1.1933, 0.0394, 1.4147, 2, -0.8852, 1.6098, 1.1494, 0.0068, 2, 2.0612, -0.4309, 1.2013, -0.2778, 3.0668, 2.0662, -0.575, 0.8699, 0.8924, 3.0688, 2.038, -0.5562, 0.8518, 0.5154, 2.4813, 0.9449, -0.9527, 0.8775, 0.824, 2.2063, 0.0357, 0.7912, 0.802, -0.9991, 0.9161, 0.6193, -1.4005, 0.9449, 0.6468, 1.5448, 0.9152, 0.6966, -0.0308),
                  tolerance = 1e-2)
     fs <- fscores(simmod, verbose = FALSE)
-    expect_true(mirt:::closeEnough(fs[1:6,'F1'] - c(-2.637106, -2.327132, -2.414865,
-                                                    -2.105639, -1.956874, -2.119947), -1e-2, 1e-2))
+    expect_true(mirt:::closeEnough(fs[1:6,'F1'] - c(-2.630559, -2.334839, -2.415723, -2.127306, -1.976905, -2.139828), -1e-2, 1e-2))
     expect_is(fs, 'matrix')
 
     res <- residuals(simmod, verbose = FALSE)
@@ -145,5 +144,5 @@ test_that('dich data', {
     expect_equal(cfs, c(1.1676, 0.0707, -1.1358, 0.9599, 0.8734, 0.2572, 1.4081, -0.094, 1.1603, 0.995, 0.3638, -2.2318, 1.1071, 0.2902, 0.474, 1.0824, 0.4672, 0.5874, 1.0401, 0.5948, -0.6579, 1.1344, 0.6779, -0.5169, 0.8959, 0.5099, -0.4837, 1.0979, 0.6283, -0.9717, 0.9903, 0.5833, -0.4863, 1.0698, 0.4347, -1.0032, 1.0424, 0.0972, -0.7258, 1.2091, 0.3615, 0.033, 0.9242, 0.4008, 0.8843, 0.9596, 0.6284, -0.0587, 0.6674),
                  tolerance = 1e-2)
     fs <- fscores(simmod, scores.only=T, returnER=TRUE)
-    expect_equal(as.numeric(fs), c(0.7880284, 0.7752552, 0.2284767, 0.3235505, 0.1965711), tolerance = 1e-2)
+    expect_equal(as.numeric(fs), c(0.6671379, 0.6482172, 0.1135845, 0.2121324, 0.1107422), tolerance = 1e-2)
 })
